# KBlueprint

./: .gitignore  CMakeLists.txt  CPUFeatures.h  LICENSE  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  build_package.sh  main.cpp  resources.qrc
BaseWindow/: mainwindow.cpp  mainwindow.h  styles.qss
BlueprintMain/: BlueprintClass.cpp  BlueprintClass.h  BlueprintClass.ui  CMakeLists.txt  resources.qrc
BlueprintMain/Draw/: Background.cpp  Background.h  PaintNode-impl.cpp  PaintNode.h  StyleType.h
BlueprintMain/EventHelpers/: EventHelpers-impl.ixx  EventHelpers.ixx
BlueprintMain/Module/: BlueprintPortType.ixx
BlueprintMain/Types/: DataType-impl.ixx  DataType.ixx  NodeType-impl.ixx  NodeType.ixx  PortType.h  VarType.h
BlueprintMain/include/: BlueprintClass.h  BlueprintConnection.h  BlueprintFont.h  BlueprintNode.h  BlueprintPort.h  RegionItem.h
BlueprintMain/qss/: ContextMenu.qss
BlueprintMain/src/: BlueprintClass.cpp  BlueprintConnection.cpp  BlueprintFont.cpp  BlueprintNode.cpp  BlueprintPort.cpp  RegionItem.cpp
BlueprintMain/ui/: BlueprintClass.ui
Container/: CMakeLists.txt
Container/Module/: Detail.h  Detail.ixx
Container/Vec/: Vector.h  Vector.tpp
Expand_MoeChat/: ChatInterface.cpp
HTTP/: CMakeLists.txt  HttpClient.cpp  HttpClient.h
IP/CPU/: CMakeLists.txt
IP/CPU/include/: Attributes.h  IP.h  ImageDataType.h
IP/CPU/src/: IP.cpp
IP/CUDA/include/: IP.h
IP/CUDA/src/: gray.cu
Math/: MMat.h  MVec.h  simd.h
Math/Mat/include/: Mat2x2.h  Mat2x2.hpp  Mat2x3.h  Mat2x3.hpp  Mat2x4.hpp  Mat3x2.h  Mat3x2.hpp  Mat3x3.hpp  Mat3x4.h  Mat3x4.hpp  Mat4x2.h  Mat4x2.hpp  Mat4x3.h  Mat4x3.hpp  Mat4x4.hpp
Math/Mat/src/: Mat2x2.cpp  Mat2x2.inl  Mat2x3.cpp  Mat2x3.inl  Mat2x4.cpp  Mat2x4.inl  Mat3x2.cpp  Mat3x2.inl  Mat3x3.cpp  Mat3x3.inl  Mat3x4.cpp  Mat3x4.inl  Mat4x2.cpp  Mat4x2.inl  Mat4x3.cpp  Mat4x3.inl  Mat4x4.cpp  Mat4x4.inl
Math/Vec/include/: Vec1.h  Vec1.hpp  Vec2.h  Vec2.hpp  Vec3.h  Vec3.hpp  Vec4.h  Vec4.hpp
Math/Vec/src/: Vec1.cpp  Vec2.cpp  Vec2.inl  Vec3.inl  Vec4.cpp  Vec4.inl
Math/detail/: simd.h  type_traits.h
NASM/: CMakeLists.txt  asm.h  zclamp.asm
NASM/include/: nasm.h  zclamp.h
NASM/src/: clamp.asm
Panels/: CMakeLists.txt  icons.qrc
Panels/Auxiliary/: BottomBar.cpp  BottomBar.h  LeftToolBar.cpp  LeftToolBar.h
Panels/Explorer/: FileViewer.cpp  FileViewer.h  explorer.cpp  explorer.h  explorerHeader.cpp  explorerHeader.h
Panels/RenderPreviewWidget/: RenderPreviewWidget.cpp  RenderPreviewWidget.h
Panels/SystemMonitor/: CPUUsage.cpp
Panels/Terminal/: terminal.cpp  terminal.h
Panels/Terminalpanel/: CPUUsage.h  terminal.cpp  terminal.h  terminalUI.cpp  terminalUI.h
RENDER/: CMakeLists.txt  Camera.cpp  CameraController.cpp  CameraController.h  FrameLimiter.h  FrameLimiter.tpp  FrameRateCounter.h  FrameRateCounter.tpp  Input.cpp  Input.h  Timer.h  Timer.tpp  cameraclass.cpp  cameraclass.h  inputclass.cpp  inputclass.h
RENDER/utils/: constexprSwitch.h
RENDER/vk/: System.cpp  System.h  UniformBufferObject.h  Vertex.h  VulkanApplication.cpp  VulkanApplication.h
RENDER/vk/Init/: VulkanCommand.cpp  VulkanCommand.h  VulkanConfig.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSync.cpp  VulkanSync.h
RENDER/vk/Init/utils/: KDebug.cpp  KDebug.h  Memory.h  VulkanBoolUtils.h  VulkanConstexprUtils.h  VulkanEnumerateUtils.h
RENDER/vk/Model/: Mesh.cpp  Mesh.h
RadialMenu/: RadialMenu.cpp  RadialMenu.h
Rust/: Cargo.toml
Rust/src/: lib.rs
SplashWindow/: SplashWindow.cpp  SplashWindow.h
Title/: TitleBar.cpp  TitleBar.h  TitleStyle.cpp  TitleStyle.h  darkstyle.qss  icon.qrc
UserGuide/: CMakeLists.txt  Program.cs  UserGuide.cpp  UserGuide.csproj  UserGuide.h
UserGuide/wwwroot/: index.html  script.js
cmake/: ImportCS.cmake  ImportRust.cmake
config/: ConnectionColor.xml  NodeStyle.xml  initialize.xml
style/: scrollbar.qss
utils/: CMakeLists.txt  ThreadPool.h
utils/UI/: ui_helpers.h
utils/json/: json-impl.ixx  json.ixx
utils/window/: X11.cpp  X11.h
utils/xml/: xml-impl.cpp  xml-impl.ixx  xml.h  xml.ixx
widgets/: CMakeLists.txt  DynamicWidgetContainer.cpp  DynamicWidgetContainer.h  PlaceholderPage.h
