[package]
name = "Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1"
once_cell = "1.19.0"

[lib]
name = "http"
crate-type = ["staticlib"]